# Game-from-Scratch

./: CMakeLists.txt  README.adoc  build.bat  build.sh
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_request.md  feature_request.md
libs/glad/include/glad/: gl.h
src/: Main.cpp
